# Lode_Runner

./: .gitignore  CLAUDE.md  constants.py  enemy.py  game.py  highscores.py  level.py  main.py  player.py  pyproject.toml  renderer.py  sound_manager.py
docs/superpowers/plans/: 2026-03-28-sprint-1-foundation.md
docs/superpowers/specs/: 2026-03-28-lode-runner-development-plan-design.md
levels/: level_01.json
tests/: test_enemy.py  test_game.py  test_highscores.py  test_level.py  test_level_holes.py  test_player.py  test_player_digging.py  test_sound_manager.py
